--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 	<body>
 		<section class="nav">
 			<ul class="nav-list">
-				<li class="nav-list-items"><a href="#">OUR MISSION</a></li>
 				<li class="nav-list-items"><a href="#">GALLERY</a></li>
-				<li class="nav-list-items"><a href="#">PLANS</a></li>
-				<li class="nav-list-items"><a href="#">CONTACT US</a></li>
+				<li class="nav-list-items"><a href="#">PROJECTS</a></li>
+				<li class="nav-list-items"><a href="#">CONTACT</a></li>
 			</ul>
 			<header class="hero">
 				<div class="hero-wrapper">
@@ -28,15 +27,15 @@
 						style="border: none;"
 						width="800"
 						height="450"
-						src="https://whimsical.com/embed/WQdUQeQtAdDwcnJagbaetT@2Ux7TurymMTE6bxLypvZ"
-					></iframe>
+						src="./images/design.gif" />
+					
 				</div>
 				<div>
-					<h2 class="hero-title">ABOUT FAYTHLIFIED</h2>
+					<h2 class="hero-title">UX/UI Design Engineering:</h2>
 					<p class="hero-title-about">
-						Here at Faythlified we will curate your social media pages & guarantee full growth potential by
-						utilising best practice design methods & strategies that are personalised for you or your brand
-						in mind!
+						"The study of designing Mobile and Web experiences
+						 for the user→human→customer in mind by following 
+						 best practices for Design & Software Engineering."
 					</p>
 				</div>
 			</header>
