--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<ul class="nav-list">
 				<li class="nav-list-items"><a href="#">GALLERY</a></li>
 				<li class="nav-list-items"><a href="#">PROJECTS</a></li>
+				<p><a href="/practice-project/default.asp">History of Typography</a></p>
 				<li class="nav-list-items"><a href="#">CONTACT</a></li>
 			</ul>
 			<header class="hero">
