--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="p:domain_verify" content="f5f7d06d5f86c6e986917d2bb48b59ad"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
@@ -11,15 +12,15 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
 			rel="stylesheet"
 		/>
+		
 		<link rel="stylesheet" href="./style.css" />
-		<title>Mock Portfolio Site</title>
+		<title>Mockfolio</title>
 	</head>
 	<body>
 		<section class="nav">
 			<ul class="nav-list">
-				<li class="nav-list-items"><a href="#">GALLERY</a></li>
+				<li class="nav-list-items"><a href="#">ABOUT</a></li>
 				<li class="nav-list-items"><a href="#">PROJECTS</a></li>
-				<p><a href="/practice-project/default.asp">History of Typography</a></p>
 				<li class="nav-list-items"><a href="#">CONTACT</a></li>
 			</ul>
 			<header class="hero">
